--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>Wait five seconds</h1>
-	    	Microsoft: contact me, and I will transfer this domain for you (I'm not actually trying to make money on this, I only did it as a joke).<br>
+	    	Microsoft: contact me, and I will transfer this domain for you (I'm not actually trying to make money on this, I only bought this domain as a joke).<br>
 	    	You will be redirected to <a href="https://www.microsoft.com/es-pe/">https://www.microsoft.com/es-pe/</a> in five seconds.<br>
 	    	<br>The microsoft.pe domain will expire automatically 19 April 2017.
             </div>
